--- a/.github/workflows/CI.js.yml
+++ b/.github/workflows/CI.js.yml
@@ -24,10 +24,9 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
-        path: "./client"
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: "./client/package-lock.json"
-    - run: npm ci
+    - run: cd client && npm ci
     - run: npm run build --if-present
     - run: npm test
