--- a/.github/workflows/CI.js.yml
+++ b/.github/workflows/CI.js.yml
@@ -28,5 +28,5 @@ jobs:
         cache: 'npm'
         cache-dependency-path: "./client/package-lock.json"
     - run: cd client && npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - run: cd client && npm run build --if-present
+    - run: cd client && npm test
