fix docker-compose issues

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,4 @@ COPY package*.json /app/
 RUN ["npm", "install"]
 COPY . /app/
 EXPOSE 5000
-ENTRYPOINT ["npm", "run", "dev"]
+ENTRYPOINT ["npm", "start"]
